modoficado cores background.

--- a/index.html
+++ b/index.html
@@ -6,22 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu portifólio.</title>
 </head>
-<body>
+<style>
+body{
 
-    <p><strong id="meuNome">Allan Medeiros Minato</ul></p></strong>
+    background-color: lemonchiffon;
+
+}
+img    {
+    border-radius: 10%;
+}
+ .myname{
+    font-style:oblique;
+    background-color: hwb(19 28% 0%);
+}
+
+ p{
+    background-position-x: right;
+    
+}
+
+
+</style>
+<body>
+    
+    <p><strong class="myname" id="meuNome">Allan Medeiros Minato</ul></p></strong>
 
 <p id="foto"><img src="minhaFoto.jpeg"  title="Foto tirada na Ilha do Campeste, Florianópolis, um descanso merecido..." width="150"></p>
 
-<i id="sobreMim">Nascido e criado em Sombrio/SC, em uma fase de transições e mudanças!</i>
+<i id="sobreMim"> Nascido e criado em Sombrio/SC, em uma fase de transições e mudanças!</i>
+
 <a href="minhaFoto.jpeg">Foto</a><br><br>
+
+    <h3>Habilidades que possuo:</h3>
+
 <li id="skill">Aprender coisas novas com facilidade.</li>
+
 <li>Habilidade em resolver problemas.</li>
+
 <li>Lidar com adversidades.</li>
-<li><strong>A que mais me orgulho:</strong> <i>Comunicação interpessoal, seja com amigos ou equipe da qual já trabalhei.</i>
+
+<strong><li><i>Comunicação interpessoal, seja com amigos ou equipe da qual já trabalhei.</i></li></strong>
 
     <p><a href="https://www.ahnegao.com.br/">Blog de comédia favorito.</a> </p>  
 
-<h3>Índice</h3>
+    <h3>Índice</h3>
 <ul>
 <li><a href="#meuNome">Meu nome</a></li>
 
