criado style.css e adicionado divisões.

--- a/index.html
+++ b/index.html
@@ -5,46 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu portifólio.</title>
-   
+    <link rel="stylesheet" href="style.css">
 
 
 
     </head>
 <style>
-body{
-
-    background-color: lemonchiffon;
-}
-img    {
-    border-radius: 10%;
-}
- h3{
-    font-style:oblique;
-    background-color: hwb(49 28% 0%);
-}
-
-.nometamanho{
-    font-size: smaller;
-}
-.nometamanho2{
-    font-size: small;
-}
-.nometamanho3{
-    font-size: medium;
-}
-.nometamanho4{
-    font-size: large;
-}
 
 
 </style>
 <body>
-    <table width="200px" border="0">
-        <tr><td>
-       <p style="text-align: justify;"><p><h3 class="myname" id="meuNome">Allan Medeiros Minato</ul></p></h3>
-    </p>
-        </td></tr>
-      </table>
+    
     
 <p id="foto"><img src="minhaFoto.jpeg"  title="Foto tirada na Ilha do Campeste, Florianópolis, um descanso merecido..." width="150"></p>
 
